# CoursAnalysePhilologique

./: Listes de Références.md  Pipeline HTR.canvas  README.md
Chap-01_Manuscrits/: PAD-01-PHIL_Lecture-Manuscrit-Philologie.md  PAD-02-PHIL_Philologie-ML.md  PAD-03-PHIL_Introduction-Technique.md  Slides_01_Lecture_Manuscrit_Philologie.md  Slides_02_Philologie_vers_ML.md  Slides_04_Introduction_Technique.md  TP-01-PHIL_Transcription-Manuelle.md
Chap-02_Vision-par-Ordinateur/: PAD-01-CVIS_Reconnaissance-Segmentation.md  PAD-02-CVIS_Convolution.md  PAD-03-CVIS_VisionTransformer.md  PAD-04-CVIS_Attention-U-Net.md  PAD-05-CVIS_DeepLab.md  PAD-06-CVIS_Synthèse.md  Slides_01_Rappel_CNN.md
Chap-02_Vision-par-Ordinateur/Exercices/: kangourous.md
Chap-02_Vision-par-Ordinateur/Exercices/kangaroos/: kangaroo.py  kangourous.md  pyproject.toml
Chap-03-CVIS_Frameworks/: PAD-01-CVIS_Modeles-Fondationnels.md  PAD-02-CVIS_DINO-SSL.md  PAD-03-CVIS_CLIP.md  PAD-04-CVIS_SAM.md  PAD-05-CVIS_TrOCR.md
Chap-04-CVIS_Pipelines/: OAD-03-CVIS_Agregation.md  PAD)-02-CVIS_Pipeline-Kraken.md  PAD-01-CVIS_Pretraitement.md  PAD-04-CVIS_Pipeline-DataContract.md
YOLO-GEN_Détection/: ._détection_yologen.md
data/test/transcription/: voltaire_0.txt  voltaire_0_chatGPT.txt  voltaire_0_claude.txt  voltaire_0_deepseek.txt  voltaire_0_gemini.txt
src/: color_space_histogram.ipynb  traitement_kraken.ipynb
