[project]
name = "kangarioos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "imutils>=0.5.4",
    "ipython[all]>=9.13.0",
    "keras>=3.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tensorflow>=2.20.0",
]
